test/types/string/sungeun/c_string/multilocale/c_str_on_remote_string.good
c_str_on_remote_string.chpl:7: error: halt reached - Cannot call .c_str() on a remote string
